+ autocomplete filters for text fields: subject, relationship, object, filter EmbeddedNeo4j cleanup:     reordered methods into sections     renamed methods to follow a conventional scheme     changed RelTypes enum member from KNOWS to f2_1 (prep for multi-entity)